# server/internal/openapi/go/model_confirm_operations_request.go
@@ -1,0 +1,34 @@
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+/*
+ * Verni
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * API version: 0.0.1
+ */
+
+package openapi
+
+type ConfirmOperationsRequest struct {
+	Ids []string `json:"ids"`
+}
+
+// AssertConfirmOperationsRequestRequired checks if the required fields are not zero-ed
+func AssertConfirmOperationsRequestRequired(obj ConfirmOperationsRequest) error {
+	elements := map[string]interface{}{
+		"ids": obj.Ids,
+	}
+	for name, el := range elements {
+		if isZero := IsZeroValue(el); isZero {
+			return &RequiredError{Field: name}
+		}
+	}
+
+	return nil
+}
+
+// AssertConfirmOperationsRequestConstraints checks if the values respects the defined constraints
+func AssertConfirmOperationsRequestConstraints(obj ConfirmOperationsRequest) error {
+	return nil
+}
